--- a/src/common.less
+++ b/src/common.less
@@ -3,6 +3,7 @@
 #app {
     height: 100%;
     overflow-x: auto;
+    background-color: #e1e1e1;
 }
 
 ol,
@@ -103,8 +104,10 @@ q {
 }
 
 .view {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
     background: #fff;
-    padding: 12px;
 }
 
 // 为了解决表格过滤项被遮挡问题。
@@ -143,18 +146,6 @@ q {
 .ant-menu-horizontal > .ant-menu-item > a:hover{
     text-decoration: none;
 }
-// .ant-menu-item.ant-menu-item-selected:after {
-//     border-right: none;
-// }
-
-// .ant-menu-item,
-// .ant-menu-submenu-title {
-//     font-size: 14px !important;
-// }
-
-// .ant-menu-light .ant-menu-sub .ant-menu-item {
-//     color: rgba(0, 0, 0, .45);
-// }
 
 //改造tab
 .hy-reset-tab {
