--- a/src/page/admin/film/index.less
+++ b/src/page/admin/film/index.less
@@ -15,3 +15,23 @@
   }
 
 }
+
+.create-drawer {
+
+  .drawer-foot {
+    position: absolute;
+    bottom: 0;
+    height: 70px;
+    line-height: 60px;
+    width: 100%;
+    border-top: 1px solid #dedede;
+  }
+  .drawer-body {
+    margin-bottom: 70px;
+
+    .title-tip {
+      display: inline-block;
+      width: 100px;
+    }
+  }
+}
