--- a/src/page/admin/index.less
+++ b/src/page/admin/index.less
@@ -1,9 +1,8 @@
 .admin-film-container {
+  padding: 20px;
 
   .title {
-    padding: 20px 10px;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 14px;
   }
 
   .body {
